--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,10 @@ h2 {
 }
 
 .content-row {
+	position: relative;
+	overflow: hidden;
 	width: 100%;
-	height: 50vh;
+	height: 80vh;
 	background-color: #fad565;
 }
 
@@ -51,9 +53,9 @@ h2 {
 	padding: 20px;
 }
 
-.parallax {
+/*.parallax {
 	position: relative;
-}
+}*/
 
 .parallax-layout {
 	background-repeat: no-repeat;
@@ -64,9 +66,9 @@ h2 {
 	position: absolute;
 	z-index: 0;
 	width: 100%;
-	height: 100%;
-	top: 0;
+	height: 140%;
+	top: -20%;
 	left: 0;
 	right: 0;
-	bottom: 0;
+	bottom: -20%;
 }
